<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginAndRegistrationActivities.SignupActivity"
    android:background="@color/bg_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_main"
            android:padding="10dp"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/hint_firstName"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/hint_secondName"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_Signup"
                android:hint="@string/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="@dimen/button_text_size"/>

            <Button
                android:id="@+id/btn_back"
                android:hint="@string/btn_back"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="@dimen/button_text_size"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
